# template-maplibre-fastApi-martin

./: .env.example  .gitignore  README.md
apps/geoframe-novo-api/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/geoframe-novo-api/alembic/: env.py
apps/geoframe-novo-api/alembic/versions/: 0001_initial.py  0002_resource_configs.py  0003_resource_config_security_rules.py  0004_layer_groups.py  0005_resource_catalog_overrides.py  0006_layer_styles.py  0007_resource_config_profiles.py  0008_storage_buckets.py  0009_resource_config_thumbnail.py
apps/geoframe-novo-api/app/: config.py  dependencies.py  logging.py  main.py
apps/geoframe-novo-api/app/admin/: sqladmin.py
apps/geoframe-novo-api/app/api/: router.py
apps/geoframe-novo-api/app/core/: audit.py  constants.py  exceptions.py  keycloak.py  pagination.py  permissions.py  security.py
apps/geoframe-novo-api/app/db/: base.py  metadata.py  session.py
apps/geoframe-novo-api/app/models/: __init__.py  audit_log.py  catalog.py  data_source.py  group.py  group_layer.py  layer_binding.py  layer_style.py  map_project.py  resource.py  resource_field.py  resource_style.py  role.py  storage.py  user.py
apps/geoframe-novo-api/app/repositories/: audit_repository.py  catalog_repository.py  feature_repository.py  group_layer_repository.py  resource_repository.py  user_repository.py
apps/geoframe-novo-api/app/schemas/: audit_log.py  auth.py  catalog.py  group.py  (+7 more)
apps/geoframe-novo-api/tests/: test_auth.py  test_catalog.py  test_features.py  test_group_layers.py  test_resources.py  test_tiles.py
(+201 files in other folders)
